Add div outside of the unordered list
Add div outside of unordered list so it can be targeted for clearing.

--- a/assets/scripts/restaurants/restaurant-listing.handlebars
+++ b/assets/scripts/restaurants/restaurant-listing.handlebars
@@ -1,4 +1,5 @@
 {{#each restaurants as |restaurant|}}
+<div class="one-restaurant">
   <ul data-id="{{restaurant.id}}">
   <li class="name">Name: <span>{{restaurant.name}}</span></li>
   <li class="rating">
@@ -18,4 +19,5 @@
   <li><form class="update-form"></form><button class="update btn btn-default">Update</button></li>
   <li><p class="confirm-delete"><button class="confirmation btn btn-default">Delete</button></p></li>
   </ul>
+</div>
 {{/each}}
