--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,3 +1,4 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+@import url('https://fonts.googleapis.com/css?family=Ribeye+Marrow|Roboto');
 @import 'theme';
