Add ID row to the handlebars
When all fave restaurants are shown, the user will be able to see the ID
of the restaurant and therefore can use that for the get request.

--- a/assets/scripts/restaurants/restaurant-listing.handlebars
+++ b/assets/scripts/restaurants/restaurant-listing.handlebars
@@ -16,6 +16,7 @@
       Neighborhood: <span>N/A</span>
     {{/if}}
   </li>
+  <li class="show-id">ID: <span>{{restaurant.id}}</span></li>
   <li><form class="update-form"></form><button class="update btn btn-default">Update</button></li>
   <li><p class="confirm-delete"><button class="confirmation btn btn-default">Delete</button></p></li>
   </ul>
